@@ -138,16 +138,5 @@ compose.desktop {
       // packageVersion = project.ext["base_tag"].toString().replace("v", "")
       packageVersion = "1.0.0"
     }
-
-    // https://github.com/KevinnZou/compose-webview-multiplatform/blob/main/README.desktop.md#flags
-    jvmArgs("--add-opens", "java.desktop/sun.awt=ALL-UNNAMED")
-    jvmArgs(
-      "--add-opens",
-      "java.desktop/java.awt.peer=ALL-UNNAMED",
-    ) // recommended but not necessary
-    if (System.getProperty("os.name").contains("Mac")) {
-      jvmArgs("--add-opens", "java.desktop/sun.lwawt=ALL-UNNAMED")
-      jvmArgs("--add-opens", "java.desktop/sun.lwawt.macosx=ALL-UNNAMED")
-    }
   }
 }
